2010-03-12  Garret Kelly  <gdk@chromium.org>

        Unreviewed.

        Fix Chromium Mac build. This time, with actual fixing goodness.

        * src/WebInputEventConversion.cpp:
        (WebKit::toPlatformTouchEventType):
        (WebKit::toPlatformTouchPointState):

2010-03-12  Garret Kelly  <gdk@chromium.org>

        Unreviewed.

        Fix Chromium Mac build.

        * src/WebInputEventConversion.cpp:
        (WebKit::toPlatformTouchEventType):
        (WebKit::toPlatformTouchPointState):

2010-03-12  Garret Kelly  <gdk@chromium.org>

        Reviewed by Eric Seidel.

        Enable touch events in Chromium features gypi file.
        https://bugs.webkit.org/show_bug.cgi?id=35994

        * features.gypi:

2010-03-12  Darin Fisher  <darin@chromium.org>

        Fix Chromium build bustage.

        Wrap usage of WebPrivatePtr from WebNode.h in a #if
        WEBKIT_IMPLEMENTATION guard.

        * public/WebNode.h:

2010-03-12  Nicolas Weber  <thakis@chromium.org>

        Reviewed by David Levin.

        [Chromium] Cmd-clicking submit buttons should submit in new tab 
        https://bugs.webkit.org/show_bug.cgi?id=36023

        Take modifiers into account when clicking form buttons. E.g.
        cmd-clicking a submit button will submit in a new background tab,
        cmd-shift-clicking in a new foreground tab, shift-clicking in a new
        window. (On windows/linux, it's ctrl instead of cmd.)

        * src/FrameLoaderClientImpl.cpp:
        (WebKit::FrameLoaderClientImpl::actionSpecifiesNavigationPolicy):

2010-03-12  Kavita Kanetkar  <kkanetkar@chromium.org>

        Reviewed by Darin Fisher.

        [chromium] Fix memory leak in WebImageDecoder API
        https://bugs.webkit.org/show_bug.cgi?id=35946

        * src/WebImageDecoder.cpp:
        (WebKit::WebImageDecoder::setData):
        (WebKit::WebImageDecoder::getFrameAtIndex):

2010-03-11  Aaron Boodman  <aa@chromium.org>

        Kill WebDocument::applicationID() (part 1).
